<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_fingerprint"
        android:textAppearance="?attr/textAppearanceHeadline2"
        app:layout_constraintHorizontal_bias="0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/xsmall"
        android:text="@string/title_Fingerprint"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="@dimen/Xlarge"/>

    <TextView
        android:id="@+id/intro1_fingerprint"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:text="@string/intro1_Registration"
        app:layout_constraintStart_toStartOf="@id/title_fingerprint"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/title_fingerprint" />

    <ImageView
        android:id="@+id/img_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/artfinger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro1_fingerprint"
        app:layout_constraintBottom_toTopOf="@id/intro2_fingerprint"
         />

    <TextView
        android:id="@+id/intro2_fingerprint"
        style="?attr/textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/intro2_Registration"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        android:textColor="@color/colorOnBackground"
       app:layout_constraintBottom_toTopOf="@id/button"
        android:layout_marginBottom="@dimen/average"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginBottom="@dimen/Xlarge"
        android:text="@string/text_getStart"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>