<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_onBoarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/artwork"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_OnBoarding"
        style="?attr/textAppearanceHeadline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/XXlarge"
        android:lineSpacingExtra="@dimen/xsmall"
        android:text="@string/title_onBoarding"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintStart_toStartOf="@id/img_onBoarding"
        android:layout_marginStart="@dimen/large"
        app:layout_constraintTop_toTopOf="@id/img_onBoarding" />

    <TextView
        android:id="@+id/intro_OnBoarding"
        style="?attr/textAppearanceBody1"
        android:textColor="@color/colorOnBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/average"
        android:text="@string/intro_onBoarding"
        app:layout_constraintStart_toStartOf="@id/title_OnBoarding"
        app:layout_constraintTop_toBottomOf="@id/title_OnBoarding" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_getStart"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginStart="@dimen/large"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/XXlarge" />


</androidx.constraintlayout.widget.ConstraintLayout>