<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        style="@style/titleH1OnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:text="@string/name_app"
        app:layout_constraintEnd_toEndOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="@id/img_logo"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <TextView
        style="@style/textH6OnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/secure_icon"
        android:drawablePadding="@dimen/avrage"
        android:gravity="center"
        android:text="@string/text_secure"
        app:layout_constraintBottom_toTopOf="@id/tv_lawCopyright"
        android:layout_marginBottom="@dimen/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        style="@style/textH6OnPrimary"
        android:id="@+id/tv_lawCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/law_copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/Xlarge"/>

</androidx.constraintlayout.widget.ConstraintLayout>