<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title_register"
        style="?attr/textAppearanceHeadline2"
        android:textColor="@color/colorOnBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Xlarge"
        android:text="@string/title_Registration"
        android:lineSpacingExtra="@dimen/xsmall"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/large"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro1_register"
        style="?attr/textAppearanceBody1"
        android:textColor="@color/colorOnBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:text="@string/intro1_Registration"
        app:layout_constraintStart_toStartOf="@id/title_register"
        app:layout_constraintTop_toBottomOf="@id/title_register" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_sim1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_sim2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">
    <ImageView
        android:id="@+id/img_sim1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/sim1" />
    </com.google.android.material.card.MaterialCardView>

<com.google.android.material.card.MaterialCardView
    android:id="@+id/card_sim2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/card_sim1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.4">

    <ImageView
        android:id="@+id/img_sim2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/sim1"
     />
</com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/intro2_register"
        style="?attr/textAppearanceBody1"
        android:textColor="@color/colorOnBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:text="@string/intro2_Registration"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintTop_toBottomOf="@id/card_sim1" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginBottom="@dimen/Xlarge"
        android:text="@string/text_getStart"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>