<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_view_top"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarDivider"
            android:gravity="center"
            android:padding="@dimen/small"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <TextView
        style="?attr/textAppearanceHeadline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:background="@color/colorPrimary"
        android:drawablePadding="@dimen/xsmall"
        android:text="@string/text_PayMoney"
        android:paddingBottom="@dimen/large"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_payMoney"
    style="?attr/textAppearanceSubtitle1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/large"
    android:layout_marginEnd="@dimen/large"
    android:layout_marginTop="@dimen/Xlarge"
    android:drawablePadding="@dimen/xsmall"
    android:text="@string/text_EnterAmount"
    android:textColor="@color/colorOnBackground"
    app:layout_constraintTop_toBottomOf="@id/view_toolbar"
    app:layout_constraintStart_toStartOf="parent"

    />
    <TextView
        android:id="@+id/tv_amountMoney"
        style="?attr/textAppearanceHeadline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginEnd="@dimen/large"
        android:layout_marginTop="@dimen/average"
        android:drawablePadding="@dimen/xsmall"
        android:text="S  0"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/tv_payMoney"
        app:layout_constraintStart_toStartOf="parent"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_amountMoney"
        app:layout_constraintStart_toStartOf="@id/tv_amountMoney">
        <TextView
            style="@style/textAppearance.MyApp.Header6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_PayingTo"
            android:textColor="@color/colorOnBackground"/>
        <TextView
            style="@style/textAppearance.MyApp.Header6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOnBackground"
            android:layout_marginStart="@dimen/xsmall"
            android:background="@drawable/shape_surface"
            android:drawableStart="@drawable/ic_person"
            android:backgroundTint="@color/colorPrimaryVariant"
            android:padding="@dimen/small"/>
        <TextView
            style="@style/textAppearance.MyApp.Header6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_paid"
            android:layout_marginStart="@dimen/xsmall"
            android:textColor="@color/colorOnBackground"/>
    </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:spanCount="3"
            tools:itemCount="8"
            tools:listitem="@layout/card_number"
            />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/xxsmall"
        android:drawableEnd="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>