<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_view_top"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarDivider"
            android:gravity="center"
            android:padding="@dimen/small"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />

        <EditText
            style="?attr/textAppearanceHeadline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:layout_marginEnd="@dimen/large"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/xsmall"
            android:hint="@string/hintSearch"
            android:paddingBottom="@dimen/large"
            android:textColorHint="@color/color_hint"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        style="?attr/textAppearanceSubtitle1"
        android:id="@+id/tv_Paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:layout_marginStart="@dimen/large"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/text_recentlyPaid"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/viewSearch"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_paid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="@dimen/average"
        android:layout_marginEnd="@dimen/large"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_Paid"
        tools:listitem="@layout/card_paid"
        tools:itemCount="4"
        />
    <TextView
        style="?attr/textAppearanceSubtitle1"
        android:id="@+id/tv_Paid_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginStart="@dimen/large"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/text_PaidFor"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/list_paid"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_paidFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large"
        android:layout_marginTop="@dimen/average"
        android:layout_marginEnd="@dimen/large"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_Paid_for"
        tools:listitem="@layout/card_paid"
        app:spanCount="1"
        tools:itemCount="4"
        />
    <TextView
        style="?attr/textAppearanceSubtitle1"
        android:id="@+id/tv_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginStart="@dimen/large"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/text_contact"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/list_paidFor"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/average"
        android:layout_marginTop="@dimen/average"
        android:layout_marginEnd="@dimen/large"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_contact"
        tools:listitem="@layout/card_contact"
        tools:itemCount="4"
        app:spanCount="10"
        />

</androidx.constraintlayout.widget.ConstraintLayout>